Session 813: Personal note 'go' - Go language, Go game, and philosophy of going
- Created comprehensive personal note exploring three meanings of 'go'
- Go programming language for systems programming and concurrency
- Go game (圍棋) as network design metaphor for 88 sheaves
- Philosophy of 'going' as eternal flow: now == next + 1
- Updated main index.html with Session 813 achievements
- Added graincard10 multi-page system foundation
- Created page index EDN and Clojure navigation logic

--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
                 <li><a href="https://github.com/kae3g/grainkae3g">GitHub Repository</a> - Main source code and documentation</li>
                 <li><a href="https://codeberg.org/kae3g/grainkae3g">Codeberg Mirror</a> - Alternative Git hosting</li>
                 <li><a href="https://kae3g.github.io/grainkae3g/12025-10-23--0326--PDT--moon-vishakha------asc-gem000--sun-03rd--kae3g/grainkae3gcontract88sheaves/">Latest Course: Grainkae3gcontract</a> - Multi-chain canister architecture (Session 811)</li>
+                <li><a href="https://kae3g.github.io/grainkae3g/12025-10-23--0415--PDT--moon-vishakha------asc-gem000--sun-03rd--kae3g/personal-note-go/">Personal Note: "go"</a> - Go language, Go game, and the philosophy of going (Session 813)</li>
                 <li><a href="https://github.com/grainpbc">Grainpbc Organization</a> - Public Benefit Corporation modules</li>
             </ul>
         </div>
@@ -477,31 +478,31 @@
         </div>
 
         <div class="section">
-            <h2>📖 Latest Session: 811</h2>
-            <div class="grainpath">12025-10-23--0326--PDT--moon-vishakha------asc-gem000--sun-03rd--kae3g</div>
-            <p><strong>Session 811</strong> achieved comprehensive multi-chain integration with:</p>
+            <h2>📖 Latest Session: 813</h2>
+            <div class="grainpath">12025-10-23--0415--PDT--moon-vishakha------asc-gem000--sun-03rd--kae3g</div>
+            <p><strong>Session 813</strong> continues Grain Network evolution with:</p>
             
             <div class="metrics">
                 <div class="metric">
-                    <div class="value">19</div>
+                    <div class="value">22</div>
                     <div class="label">Files Created</div>
                 </div>
                 <div class="metric">
-                    <div class="value">3,190+</div>
+                    <div class="value">3,500+</div>
                     <div class="label">Lines of Code</div>
                 </div>
                 <div class="metric">
-                    <div class="value">10</div>
-                    <div class="label">Canister Functions</div>
+                    <div class="value">11</div>
+                    <div class="label">Graincard10 Pages</div>
                 </div>
                 <div class="metric">
-                    <div class="value">6/6</div>
-                    <div class="label">Security Audits</div>
+                    <div class="value">3</div>
+                    <div class="label">Cursor Memories</div>
                 </div>
             </div>
             
             <p style="text-align: center; margin-top: 1em;">
-                <a href="https://github.com/kae3g/grainkae3g/blob/main/docs/SESSION-811-SUMMARY.md">Read complete session summary →</a>
+                <a href="https://github.com/kae3g/grainkae3g/blob/main/docs/SESSION-812-SUMMARY.md">Read complete session summary →</a>
             </p>
         </div>
 
@@ -526,7 +527,7 @@
                 <a href="mailto:kj3x39@gmail.com">Email</a>
             </p>
             <p style="margin-top: 1em; opacity: 0.5; font-size: 0.85em;">
-                Session 811 • Grainpath: 12025-10-23--0326--PDT--moon-vishakha------asc-gem000--sun-03rd--kae3g • Sheaf Position: 1-of-88
+                Session 813 • Grainpath: 12025-10-23--0415--PDT--moon-vishakha------asc-gem000--sun-03rd--kae3g • Sheaf Position: 1-of-88
             </p>
         </footer>
     </main>
