--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
                 <li><a href="https://codeberg.org/kae3g/grainkae3g">Codeberg Mirror</a> - Alternative Git hosting</li>
                 <li><a href="https://kae3g.github.io/grainkae3g/12025-10-23--0326--PDT--moon-vishakha------asc-gem000--sun-03rd--kae3g/grainkae3gcontract88sheaves/">Latest Course: Grainkae3gcontract</a> - Multi-chain canister architecture (Session 811)</li>
                 <li><a href="https://kae3g.github.io/grainkae3g/12025-10-23--0415--PDT--moon-vishakha------asc-gem000--sun-03rd--kae3g/personal-note-go/">Personal Note: "go"</a> - Go language, Go game, and the philosophy of going (Session 813)</li>
+                <li><a href="https://kae3g.github.io/grainkae3g/12025-10-23--0408--PDT--moon-vishakha------asc-gem000--sun-02nd--kae3g/grain-network-complete-course/">Grain Network Complete Course</a> - Longest grainpath with graincard10 multi-page system (10,000 pages)</li>
                 <li><a href="https://github.com/grainpbc">Grainpbc Organization</a> - Public Benefit Corporation modules</li>
             </ul>
         </div>
